--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/media.css" />
   </head>
   <body>
+    <!--
     <header class="header">
       <div class="container header-container">
         <nav class="header-nav">
@@ -56,6 +58,7 @@
         </address>
       </div>
     </header>
+    -->
 
     <main>
       <section class="container hero">
@@ -502,7 +505,7 @@
         </div>
       </section>
     </main>
-
+    <!--
     <footer class="footer">
       <div class="container footer-container">
         <div class="f-logo">
@@ -591,7 +594,8 @@
         </div>
       </div>
     </footer>
-
+    -->
+    <!--
     <div data-modal class="modal is-hidden">
       <div class="modal-window">
         <button type="button" data-modal-close class="modal-button">
@@ -676,5 +680,6 @@
     </div>
 
     <script src="./js/modal.js"></script>
+    -->
   </body>
 </html>
