--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <meta name="viewport" content="width=1024">
     <title>Web Studio (Version 4.0)</title>
     <link
       rel="stylesheet"
